<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="vncoop.q02.Rules">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_above="@+id/btnback"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/therules"
                android:id="@+id/teamId"
                android:layout_below="@+id/replayId"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="59dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/rules"
                android:id="@+id/replayId"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/btnback"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="back_click"/>

</RelativeLayout>
