<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".main_screen"
    android:background="#a92aaba8">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_game"
        android:id="@+id/btnNG"
        android:layout_alignParentTop="true"
        android:layout_marginTop="146dp"
        android:background="#cfeeffa6"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="NGClick"
        android:clickable="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_on"
        android:id="@+id/btnGoOn"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/btnNG"
        android:layout_centerVertical="true"
        android:background="#cfeeffa6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="GoOnClick"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rules"
        android:id="@+id/btnRules"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/btnGoOn"
        android:background="#cfeeffa6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="rulesClick"
        />

</RelativeLayout>
